--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,3 +1,18 @@
-<h1>
-  {{title}}
-</h1>
+<main class="vbox">
+  <section class="main hbox">
+    <nav class="sidebar child scroll">
+      <app-mob-type-selection></app-mob-type-selection>
+    </nav>
+
+    <!--
+    <md-tabs class="child scroll">
+        <md-tab name="skilltree" :active="true">{{ $t('message.skilltree') }}</md-tab>
+        <md-tab name="skill">{{ $t('message.skill') }}</md-tab>
+        <md-tab name="levelrule" :disabled="skill == null">{{ $t('message.level_rule') }}</md-tab>
+        <skilltree-select slot="skilltree"></skilltree-select>
+        <skill-select slot="skill"></skill-select>
+        <upgrade-select slot="levelrule"></upgrade-select>
+    </md-tabs>
+    -->
+  </section>
+</main>
