change selected tabindex to 0 when another mobtype gets selected

--- a/src/app/components/skilltree/skilltree.component.html
+++ b/src/app/components/skilltree/skilltree.component.html
@@ -1,4 +1,4 @@
-<md-tab-group (selectChange)="positionChange($event)">
+<md-tab-group (selectChange)="positionChange($event)" [selectedIndex]="position">
   <md-tab label="Skilltrees">
     <md-card>
       <app-skilltree-selecttion></app-skilltree-selecttion>
