--- a/src/app/components/skilltree-properties/skilltree-properties.component.html
+++ b/src/app/components/skilltree-properties/skilltree-properties.component.html
@@ -11,3 +11,7 @@
   </md-input-container>
 
 </md-card>
+
+<md-card>
+  <button md-raised-button (click)="selectMobType()">Select MobType</button>
+</md-card>
