use flexLayout some CSS cleanup renamed the skilltree-selection component to skilltree-list

--- a/src/app/components/skilltree-list/skilltree-list.component.html
+++ b/src/app/components/skilltree-list/skilltree-list.component.html
@@ -2,7 +2,7 @@
   <button md-raised-button (click)="addSkilltree()">Add Skilltree</button>
 </md-card>
 
-<md-card>
+<md-card class="no-padding">
   <md-nav-list dense>
     <md-list-item *ngFor="let skilltree of data.skilltrees" (click)="selectSkilltree(skilltree)"
                   [ngClass]="{selected: selectedSkilltree == skilltree}">
