--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,6 +1,6 @@
-<main class="vbox">
-  <section class="main hbox">
-    <app-skilltree class="wants-to-grow"></app-skilltree>
+<main>
+  <section fxLayout="column">
+    <app-skilltree></app-skilltree>
 
     <span class="bottom-right-action" *ngIf="fabVisible">
       <button md-fab (click)="fabClicked()"><md-icon>add</md-icon></button>
