--- a/src/app/components/skilltree-list/skilltree-list.component.html
+++ b/src/app/components/skilltree-list/skilltree-list.component.html
@@ -1,6 +1,6 @@
-<md-card class="small">
+<md-toolbar class="spacer-b-1em">
   <button md-raised-button (click)="addSkilltree()">Add Skilltree</button>
-</md-card>
+</md-toolbar>
 
 <md-card class="no-padding">
   <md-nav-list dense>
