--- a/src/assets/styles/components/app.scss
+++ b/src/assets/styles/components/app.scss
@@ -2,3 +2,11 @@ html, body, main {
   margin: 0;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
 }
+
+.spacer-b-1em {
+  margin-bottom: 1em;
+}
+
+.spacer-t-1em {
+  margin-top: 1em;
+}
