--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -2,5 +2,6 @@
 
 /* custom styles */
 @import "components/scrollbar";
+@import "components/minecraft";
 @import "components/app";
 @import "components/angular-material";
