--- a/src/assets/styles/components/angular-material.scss
+++ b/src/assets/styles/components/angular-material.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import "expansion/_expansion-theme";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -22,3 +23,4 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+@include mat-expansion-panel-theme($candy-app-theme);
