add some more skills

--- a/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
+++ b/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
@@ -1,1 +1,10 @@
 <app-fire-skill *ngIf="skill == 'Fire'"></app-fire-skill>
+<app-knockback-skill *ngIf="skill == 'Knockback'"></app-knockback-skill>
+<app-poison-skill *ngIf="skill == 'Poison'"></app-poison-skill>
+<app-lightning-skill *ngIf="skill == 'Lightning'"></app-lightning-skill>
+<app-slow-skill *ngIf="skill == 'Slow'"></app-slow-skill>
+<app-ride-skill *ngIf="skill == 'Ride'"></app-ride-skill>
+<app-sprint-skill *ngIf="skill == 'Sprint'"></app-sprint-skill>
+<app-stomp-skill *ngIf="skill == 'Stomp'"></app-stomp-skill>
+<app-thorns-skill *ngIf="skill == 'Thorns'"></app-thorns-skill>
+<app-wither-skill *ngIf="skill == 'Wither'"></app-wither-skill>
