--- a/src/app/components/skills/lightning-skill/lightning-skill.component.html
+++ b/src/app/components/skills/lightning-skill/lightning-skill.component.html
@@ -9,10 +9,9 @@
       <input mdInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="number">
       <span mdSuffix>%</span>
     </md-input-container>
-
     <md-input-container>
-      <input mdInput placeholder="Duration" [(ngModel)]="upgrade.duration" type="number">
-      <span mdSuffix>sec</span>
+      <input mdInput placeholder="Damage" [(ngModel)]="upgrade.damage" type="number">
+      <span mdSuffix>damage</span>
     </md-input-container>
   </md-expansion-panel>
 </div>
