--- a/src/app/components/skills/sprint-skill/sprint-skill.component.html
+++ b/src/app/components/skills/sprint-skill/sprint-skill.component.html
@@ -5,14 +5,6 @@
 <div *ngIf="skill">
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
-    <md-input-container>
-      <input mdInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="number">
-      <span mdSuffix>%</span>
-    </md-input-container>
-
-    <md-input-container>
-      <input mdInput placeholder="Duration" [(ngModel)]="upgrade.duration" type="number">
-      <span mdSuffix>sec</span>
-    </md-input-container>
+    <md-checkbox [(ngModel)]="upgrade.active">Active?</md-checkbox>
   </md-expansion-panel>
 </div>
