add beacon skill

--- a/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
+++ b/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
@@ -1,3 +1,4 @@
+<app-beacon-skill *ngIf="skill == 'Beacon'"></app-beacon-skill>
 <app-fire-skill *ngIf="skill == 'Fire'"></app-fire-skill>
 <app-knockback-skill *ngIf="skill == 'Knockback'"></app-knockback-skill>
 <app-poison-skill *ngIf="skill == 'Poison'"></app-poison-skill>
