--- a/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
+++ b/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
@@ -1,10 +1,19 @@
+<app-backpack-skill *ngIf="skill == 'Backpack'"></app-backpack-skill>
 <app-beacon-skill *ngIf="skill == 'Beacon'"></app-beacon-skill>
+<app-behavior-skill *ngIf="skill == 'Behavior'"></app-behavior-skill>
+<app-control-skill *ngIf="skill == 'Control'"></app-control-skill>
+<app-damage-skill *ngIf="skill == 'Damage'"></app-damage-skill>
 <app-fire-skill *ngIf="skill == 'Fire'"></app-fire-skill>
+<app-heal-skill *ngIf="skill == 'Heal'"></app-heal-skill>
+<app-health-boost-skill *ngIf="skill == 'Health Boost'"></app-health-boost-skill>
 <app-knockback-skill *ngIf="skill == 'Knockback'"></app-knockback-skill>
-<app-poison-skill *ngIf="skill == 'Poison'"></app-poison-skill>
 <app-lightning-skill *ngIf="skill == 'Lightning'"></app-lightning-skill>
-<app-slow-skill *ngIf="skill == 'Slow'"></app-slow-skill>
+<app-pickup-skill *ngIf="skill == 'Pickup'"></app-pickup-skill>
+<app-poison-skill *ngIf="skill == 'Poison'"></app-poison-skill>
+<app-ranged-skill *ngIf="skill == 'Ranged'"></app-ranged-skill>
 <app-ride-skill *ngIf="skill == 'Ride'"></app-ride-skill>
+<app-shield-skill *ngIf="skill == 'Shield'"></app-shield-skill>
+<app-slow-skill *ngIf="skill == 'Slow'"></app-slow-skill>
 <app-sprint-skill *ngIf="skill == 'Sprint'"></app-sprint-skill>
 <app-stomp-skill *ngIf="skill == 'Stomp'"></app-stomp-skill>
 <app-thorns-skill *ngIf="skill == 'Thorns'"></app-thorns-skill>
