add loading animation

--- a/src/assets/styles/components/app.scss
+++ b/src/assets/styles/components/app.scss
@@ -1,6 +1,7 @@
 html, body, main {
   margin: 0;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
+  height: 100%;
 }
 
 .spacer-b-1em {
