--- a/src/app/components/elements/expansion/expansion-panel.scss
+++ b/src/app/components/elements/expansion/expansion-panel.scss
@@ -1,4 +1,4 @@
-@import '../../../../node_modules/@angular/material/_theming';
+@import '../../../../../node_modules/@angular/material/_theming';
 
 .mat-expansion-panel {
   @include mat-elevation-transition;
