replace checkboxes with toggle button groups

--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -10,6 +10,19 @@
       <span mdSuffix>rows</span>
     </md-input-container>
 
-    <md-checkbox [(ngModel)]="upgrade.drop">Drop content on death?</md-checkbox>
+    <div>
+      <md-button-toggle-group [value]="upgrade.drop">
+        <md-button-toggle [value]="true" mdTooltip="Activate">
+          <md-icon>check_box</md-icon>
+        </md-button-toggle>
+        <md-button-toggle [value]="null" mdTooltip="Don't change">
+          <md-icon>indeterminate_check_box</md-icon>
+        </md-button-toggle>
+        <md-button-toggle [value]="false" mdTooltip="Deactivate">
+          <md-icon>check_box_outline_blank</md-icon>
+        </md-button-toggle>
+      </md-button-toggle-group>
+      <span>Drop content on death?</span>
+    </div>
   </md-expansion-panel>
 </div>
