--- a/src/assets/styles/components/app.scss
+++ b/src/assets/styles/components/app.scss
@@ -1,7 +1,7 @@
-html, body, main {
+html, body, main, app-skilltree, md-sidenav-container {
   margin: 0;
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
   height: 100%;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
 }
 
 .spacer-b-1em {
